src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Hubspot_HQ_created_account_date__c</fullName>
        <description>Date on which this contact first created an account on HQ</description>
        <inlineHelpText>Date on which this contact first created an account on HQ</inlineHelpText>
        <label>Hubspot - HQ created account date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_Hubspot_Score_Converted_Cont__c</fullName>
        <description>The number that shows qualification of contacts to sales readiness. It can be set in HubSpot&apos;s Lead Scoring app.</description>
        <inlineHelpText>The number that shows qualification of contacts to sales readiness. It can be set in HubSpot&apos;s Lead Scoring app.</inlineHelpText>
        <label>Hubspot - Hubspot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Lead_Score_bucketed__c</fullName>
        <formula>IF(  Hubspot_Hubspot_Score_Converted_Cont__c  &gt;=20, &quot;1-Very high&quot;, 
If (Hubspot_Hubspot_Score_Converted_Cont__c&gt;=7, &quot;2-High&quot;,
If(Hubspot_Hubspot_Score_Converted_Cont__c&gt;=-10, &quot;3-Medium&quot;,
If (Hubspot_Hubspot_Score_Converted_Cont__c&gt;=-30, &quot;4-Low&quot;,
If (Hubspot_Hubspot_Score_Converted_Cont__c&gt;=-50, &quot;5-Very low&quot;,
&quot;6-Lowest&quot;)))))</formula>
        <label>Hubspot - Lead Score bucketed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Lifecycle_stage__c</fullName>
        <description>This is mapped to the Hubspot lifecycle stage and should automatically get updated by Hubspot. Note that you CANNOT rollback a stage to a previous stage.</description>
        <inlineHelpText>This is mapped to the Hubspot lifecycle stage and should automatically get updated by Hubspot. Note that you CANNOT rollback a stage to a previous stage.</inlineHelpText>
        <label>Hubspot - Lifecycle stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_New_user_Accepted_domain__c</fullName>
        <description>Hubspot - New user Accepted domain invitation</description>
        <inlineHelpText>Hubspot - New user Accepted domain invitation</inlineHelpText>
        <label>Hubspot - New user Accepted d. inv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Next_Activity_Date__c</fullName>
        <description>Next activity date from Hubspot. Oddly this is a text field from Hubspot, not a date.</description>
        <inlineHelpText>Next activity date from Hubspot. Oddly this is a text field from Hubspot, not a date.</inlineHelpText>
        <label>Hubspot - Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hubspot_Project_Spaces_List__c</fullName>
        <description>This should get automatically populated by Hubspot --&gt; to the Lead and then to the contact when the lead gets converted to a contact</description>
        <inlineHelpText>This should get automatically populated by Hubspot --&gt; to the Lead and then to the contact when the lead gets converted to a contact</inlineHelpText>
        <label>Hubspot - Project Spaces List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_SQL_reason__c</fullName>
        <description>Automatically filled in Hubspot. Indicates which action made this contact become a SQL</description>
        <inlineHelpText>Automatically filled in Hubspot. Indicates which action made this contact become a SQL</inlineHelpText>
        <label>Hubspot - SQL reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hubspot_Time_to_First_Attempt_on_Phone__c</fullName>
        <label>Hubspot - Time to First Attempt on Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30 minutes</fullName>
                </value>
                <value>
                    <fullName>&lt; 1 hour</fullName>
                </value>
                <value>
                    <fullName>&lt; 2 hours</fullName>
                </value>
                <value>
                    <fullName>&lt; 5 hours</fullName>
                </value>
                <value>
                    <fullName>&lt;12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 day</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_User_Accepted_domain_invitatio__c</fullName>
        <label>Hubspot - User Accepted domain invit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_of_Hubspot_forms_submitted__c</fullName>
        <description>Automatically filled in by Hubspot. Indicates the number of Hubspot forms (eg form to get access a case study) that got submitted. All the key &quot;action buttons&quot; in HQ are set up as Hubspot forms so it gives a sense of the activity of the contact in CCHQ too (eg enter the form builder, click deploy, click preview, etc.)</description>
        <inlineHelpText>Automatically filled by Hubspot. Indicates # Hubspot forms submitted (eg form to get access a case study)  All the key &quot;action buttons&quot; in HQ are set up as Hubspot forms so it gives a sense of the activity of the contact in HQ (eg enter the form builder)</inlineHelpText>
        <label>Hubspot - # of Hubspot forms submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>India_Owner__c</fullName>
        <inlineHelpText>The owner that was filled out in the Div2 upload sheet. Actual owner was changed to Matt.</inlineHelpText>
        <label>India Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_a_CommCare_Evangelist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is marked as True if this person is recognized as a strong advocate of CommCare (across organizations). Tagging this person as evangelist does not have any impact yet but we might use it for marketing programs (like when we ask for blogs, stories, pictures, referral program, customer feedback...)</description>
        <inlineHelpText>Is marked as True if this person is recognized as a strong advocate of CommCare (across organizations). Tagging this person as evangelist does not have any impact yet but we might use it for marketing programs (like for blogs, feedback, referral)</inlineHelpText>
        <label>Is a CommCare Evangelist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Candidate__c</fullName>
        <description>Equals True if the lead is recognized by the Greenhouse-Hubspot integration as a job candidate (registered in Greenhouse for a job). Equals to &quot;&quot; otherwise</description>
        <inlineHelpText>Equals True if the lead is recognized by the Greenhouse-Hubspot integration as a job candidate (registered in Greenhouse for a job). Equals to &quot;&quot; otherwise</inlineHelpText>
        <label>Job Candidate</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Warm__c</fullName>
        <inlineHelpText>Check this to have the contact included in the follow-up report after 3 months of no activity.</inlineHelpText>
        <label>Keep Warm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>The primary language a person speaks.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_day_opps_sales_process_failed__c</fullName>
        <description>Automatically populated by Hubspot workflow. Latest day the opps did not follow the sales process (days without activity &gt; 10 days with opps still open)</description>
        <inlineHelpText>Automatically populated by Hubspot workflow. Latest day the opps did not follow the sales process (days without activity &gt; 10 days with opps still open)</inlineHelpText>
        <label>Latest day opps sales process failed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Drilldown__c</fullName>
        <description>Same as the field on the Lead</description>
        <label>Lead Source Drilldown</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound - Found us through Google Search</fullName>
                </value>
                <value>
                    <fullName>Inbound - Found us on Social Media</fullName>
                </value>
                <value>
                    <fullName>Inbound - Learnt about us on another website</fullName>
                </value>
                <value>
                    <fullName>Inbound - Learnt about us through an article</fullName>
                </value>
                <value>
                    <fullName>Inbound - Contacted us after seeing us at a conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_Candidate__c</fullName>
        <description>Syncing with Hubspot field - Indicating that this lead&apos;s first website page visit was a Career Page and is very likely a candidate</description>
        <inlineHelpText>Syncing with Hubspot field - Indicating that this lead&apos;s first website page visit was a Career Page and is very likely a candidate</inlineHelpText>
        <label>Likely Candidate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date_Created_in_CCHQ__c</fullName>
        <formula>RIGHT(LEFT( HubSpot_Date_Created_in_CCHQ__c , 7),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date Created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this person receive the CommCare Newsletter? If Email Opt Out is checked they won&apos;t receive no matter what.</inlineHelpText>
        <label>CommCare Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit_Name__c</fullName>
        <formula>Owner.Business_Unit_Name__c</formula>
        <label>Contact Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Ad_Lead__c</fullName>
        <description>Set to Yes by Hubspot workflow if the lead came from a Paid ad campaign. Set to blank otherwise</description>
        <inlineHelpText>Set to Yes by Hubspot workflow if the lead came from a Paid ad campaign. Set to blank otherwise</inlineHelpText>
        <label>Paid Ad Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <inlineHelpText>The title of a publication this contact has made.</inlineHelpText>
        <label>Publication Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Publication_URL__c</fullName>
        <inlineHelpText>The web address of a publication this contact has made.</inlineHelpText>
        <label>Publication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RFP_Cycle__c</fullName>
        <label>RFP Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cycle 1</fullName>
                </value>
                <value>
                    <fullName>Cycle 2</fullName>
                </value>
                <value>
                    <fullName>Cycle 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Outbound_outreach__c</fullName>
        <description>Select Yes if Inside Sales team is contacting this contact as part of an outbound outreach. Leave blank otherwise</description>
        <inlineHelpText>Select Yes if Inside Sales team is contacting this contact as part of an outbound outreach. Leave blank otherwise</inlineHelpText>
        <label>Sales Outbound outreach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>US State Abbreviations (plus DC and Puerto Rico)</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1- Working - Active Opp Development</fullName>
                </value>
                <value>
                    <fullName>2- Working - Talking</fullName>
                </value>
                <value>
                    <fullName>3- Working - Contacted</fullName>
                </value>
                <value>
                    <fullName>4- Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>5- Active Project Team Member</fullName>
                </value>
                <value>
                    <fullName>6- Active Self Start</fullName>
                </value>
                <value>
                    <fullName>7- Passive &amp; Friendly</fullName>
                </value>
                <value>
                    <fullName>8- Passive &amp; Unfriendly</fullName>
                </value>
                <value>
                    <fullName>9-HOLD Not mine/move</fullName>
                </value>
                <value>
                    <fullName>10-Dimagi Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tag field because Salesforce tags suck.  Don&apos;t delete other people&apos;s tags.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_btw_opp_creation_1st_call_schedul__c</fullName>
        <formula>IF(Date_1st_Next_activity_date_set_for_opps__c &gt;CreatedDate,(Date_1st_Next_activity_date_set_for_opps__c -CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time btw opp creation &amp; 1st call schedul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Bucket__c</fullName>
        <description>Created by Gillian - ask if you have questions</description>
        <label>Title Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite / Co-Founder</fullName>
                </value>
                <value>
                    <fullName>VP / Director</fullName>
                </value>
                <value>
                    <fullName>Manager / Coordinator</fullName>
                </value>
                <value>
                    <fullName>Officer / Advisor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Assistant / Analyst / Associate</fullName>
                </value>
                <value>
                    <fullName>Intern / Fellow / Student / Volunteer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_and_Month_Date_created_in_CCHQ__c</fullName>
        <description>Year and Month this user signed up for the first time to CCHQ (Text field syncing from CCHQ)</description>
        <formula>LEFT( HubSpot_Date_Created_in_CCHQ__c, 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Year and Month this user signed up for the first time to CCHQ (Text field syncing from CCHQ)</inlineHelpText>
        <label>Year and Month Date created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>secondary_email__c</fullName>
        <description>if someone has used another email address to correspond, sign up for an event/webinar, etc</description>
        <inlineHelpText>only add this if the contact has provided 2 (if manually entering)</inlineHelpText>
        <label>secondary email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>time_contact_failed_Sales_Opp_process__c</fullName>
        <label># time contact failed Sales Opp process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Academic</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>City_Object__c</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>.edu</value>
        </filters>
        <label>Academic Contacts 2016 Review</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Days_w_o_Activity__c</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Tag__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Senegal</value>
        </filters>
        <label>Contacts Senegal CJ KN</label>
    </listViews>
    <listViews>
        <fullName>BR_TSP_contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tag__c</field>
            <operation>equals</operation>
            <value>#BR-TSP</value>
        </filters>
        <label>BR - TSP contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>CJ_Contacts_Working_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>City_Object__c</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Relationship_Strength__c</columns>
        <columns>Days_w_o_Activity__c</columns>
        <columns>Tag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Christina</value>
        </filters>
        <label>CJ Contacts Working List</label>
    </listViews>
    <listViews>
        <fullName>CJ_Contacts_in_Open_Opp_Development</fullName>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Working - Active Opp Development</value>
        </filters>
        <label>CJ Contacts in Open Opp Development</label>
    </listViews>
    <listViews>
        <fullName>Contacts_missing_Account</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Contacts missing Account</label>
    </listViews>
    <listViews>
        <fullName>Contacts_with_Follow_Up_Date_this_Week</fullName>
        <columns>Follow_up_Date__c</columns>
        <columns>Days_w_o_Activity__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Country__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Follow_up_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Contacts with Follow-Up Date this Week</label>
    </listViews>
    <listViews>
        <fullName>Contacts_with_No_Account_Association</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Country__c</columns>
        <columns>City_Object__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Contacts with No Account Association</label>
    </listViews>
    <listViews>
        <fullName>Contacts_with_No_Account_Association_rh</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ryan</value>
        </filters>
        <label>Contacts with No Account Association-rh</label>
    </listViews>
    <listViews>
        <fullName>DLAC_Webinars</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>JUL15 DLAC Webinars</label>
    </listViews>
    <listViews>
        <fullName>DMoz_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>DMoz Contacts</label>
        <sharedTo>
            <group>All_Dimagi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DWA_Contacts</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Country__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Senegal</value>
        </filters>
        <label>DWA Contacts Khady focus in Senegal</label>
        <sharedTo>
            <group>DSA</group>
            <group>DSI</group>
            <group>Inc</group>
            <group>Moz</group>
        </sharedTo>
    </listViews>
</CustomObject>